--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,7 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0"
 config = "0.10"
+log = { version = "0.4", features = ["std", "serde"] }
+log4rs = "1.0"
 serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.8"
