--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0"
 config = "0.10"
+http = "0.2"
 log = { version = "0.4", features = ["std", "serde"] }
 log4rs = "1.0"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+warp = "0.3"
