--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 anyhow = "1.0"
 config = "0.10"
 http = "0.2"
+http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
 log = { version = "0.4", features = ["std", "serde"] }
 log4rs = "1.0"
 serde = { version = "1", features = ["derive"] }
