--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.10"
+cookie = "0.15"
 http = "0.2"
 http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
 jsonwebtoken = "7"
@@ -21,6 +22,7 @@ log = { version = "0.4", features = ["std", "serde"] }
 log4rs = "1.0"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
+time = "0.2"
 tokio = { version = "1", features = ["full"] }
 thiserror = "1.0"
 futures = "0.3"
