--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
+base64 = "0.13"
+base64-serde = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.10"
 cookie = "0.15"
@@ -23,7 +25,8 @@ log = { version = "0.4", features = ["std", "serde"] }
 log4rs = "1.0"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
-sqlx = { version = "0.5", features = [ "macros", "runtime-tokio-native-tls", "postgres", "uuid" ] }
+serde_json = "1.0"
+sqlx = { version = "0.5", features = [ "macros", "runtime-tokio-native-tls", "postgres", "uuid", "chrono" ] }
 time = "0.2"
 tokio = { version = "1", features = ["full"] }
 thiserror = "1.0"
