--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ path = "src/lib.rs"
 anyhow = "1.0"
 async-trait = "0.1"
 base64 = "0.13"
-base64-serde = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.10"
 cookie = "0.15"
+clap = "3.0.0-beta.2"
 http = "0.2"
 http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
 jsonwebtoken = "7"
