--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 anyhow = "1.0"
 async-trait = "0.1"
 base64 = "0.13"
+bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.10"
 cookie = "0.15"
