--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ cookie = "0.15"
 clap = "3.0.0-beta.2"
 http = "0.2"
 http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
+hyper = "0.14"
 jsonwebtoken = "7"
 log = { version = "0.4", features = ["std", "serde"] }
 log4rs = "1.0"
@@ -30,6 +31,7 @@ serde_json = "1.0"
 sqlx = { version = "0.5", features = [ "macros", "runtime-tokio-native-tls", "postgres", "uuid", "chrono" ] }
 time = "0.2"
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.6"
 thiserror = "1.0"
 futures = "0.3"
 warp = "0.3"
